# macfleet

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
desktop/: .gitignore  CONTRIBUTING.md  Makefile  README.md  biome.json  eslint.config.js  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
desktop/docs/: recommended-plugins.md
desktop/scripts/: bootstrap.sh
desktop/src/: main.ts  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  handlers.rs  lib.rs  main.rs  state.rs
desktop/src/components/: AgentIndicator.vue  AppHeader.vue  BulkPanel.vue  CommandPalette.vue  ContextMenu.vue  FleetSidebar.vue  LogPane.vue  SnapshotDialog.vue  ToastStack.vue  VmDetail.vue  VmProvisioning.vue
desktop/src/composables/: useDarkMode.ts  useHotkeys.ts  useToasts.ts
desktop/src/layouts/: DefaultLayout.vue
desktop/src/pages/: AboutPage.vue  HomePage.vue
desktop/src/shared/: api.ts  ipc.ts  snapshot.ts  time.ts
desktop/src/stores/: fleet.ts  ui.ts
desktop/tests/e2e/: app.spec.ts  command-palette.spec.ts  dashboard.spec.ts  mock-api.ts  vm-lifecycle.spec.ts  vm-tabs.spec.ts
desktop/tests/unit/: AboutPage.test.ts  AgentIndicator.test.ts  AppHeader.test.ts  BulkPanel.test.ts  CommandPalette.test.ts  ConnectTab.test.ts  ContextMenu.test.ts  DefaultLayout.test.ts  FleetSidebar.test.ts  FoldersTab.test.ts  HomePage.test.ts  LogPane.test.ts  LogsTab.test.ts  ResourcesTab.test.ts  ScreenTab.test.ts  SnapshotDialog.test.ts  TerminalTab.test.ts  ToastStack.test.ts  Toasts.test.ts  VmDetail.test.ts  VmProvisioning.test.ts  api.test.ts  fleet.test.ts  ipc.test.ts  snapshot.test.ts  time.test.ts  ui.test.ts  useDarkMode.test.ts  useHotkeys.test.ts  useToasts.test.ts
docs/: design-brief.md
docs/design/: .thumbnail  macfleet.dc.html
docs/superpowers/plans/: 2026-07-03-macfleet-python-engine.md  (+7 more)
macfleet/: __init__.py  _lock.py  activity.py  agent.py  api.py  cli.py  connect.py  leases.py  mcp.py  provision.py  shares.py  sidecar.py  vm.py
scripts/: bake.sh  build-engine-sidecar.sh
tests/: test_activity.py  test_agent.py  test_api.py  test_api_control.py  test_api_logs.py  test_cli.py  test_connect.py  test_integration_l0.py  test_leases.py  test_mcp.py  test_provision.py  test_shares.py  test_smoke.py  test_vm.py
(+10 files in other folders)
