[project]
name = "macfleet"
version = "0.1.0"
description = "Spin up and control a fleet of macOS VMs via tart + cua"
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "fastapi>=0.111", "uvicorn>=0.30"]

[project.optional-dependencies]
control = ["cua-computer>=0.3"]
agent = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
macfleet = "macfleet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
