[project]
name = "macfleet"
version = "0.4.1"
description = "Spin up and control a fleet of macOS VMs via tart + cua"
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "fastapi>=0.111", "uvicorn>=0.30"]

[project.optional-dependencies]
# Computer-use drives the in-guest cua-computer-server over HTTP (stdlib only), so it
# needs no client library — just the MACFLEET_ALLOW_CONTROL=1 runtime gate.
agent = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27", "pyinstaller==6.21.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
macfleet = "macfleet.cli:app"
macfleet-mcp = "macfleet.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
